--- a/database.dat.properties
+++ b/database.dat.properties
@@ -1,17 +1,5 @@
-#HSQL Database Engine 1.8.0.10
-#Mon Dec 09 14:21:30 CET 2024
-hsqldb.cache_version=1.7.0
-sql.enforce_strict_size=false
-hsqldb.compatible_version=1.8.0
-hsqldb.cache_scale=14
-hsqldb.nio_data_file=true
-version=1.8.0
-runtime.gc_interval=0
-readonly=false
-hsqldb.cache_file_scale=1
-hsqldb.cache_size_scale=8
-hsqldb.log_size=200
-hsqldb.script_format=0
-hsqldb.default_table_type=memory
-hsqldb.original_version=1.8.0
+#HSQL Database Engine 2.7.2
+#Mon Dec 09 16:51:10 CET 2024
+tx_timestamp=389
 modified=no
+version=2.7.2
