Fixed pom file issues

--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,16 @@
         </resources>
 
         <plugins>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <mainClass>com.yrgo.client.SimpleClient</mainClass> <!-- Change this to your main class -->
+                </configuration>
+            </plugin>
+
             <!-- Maven Surefire Plugin for running tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
