--- a/database.dat.properties
+++ b/database.dat.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.7.2
-#Mon Dec 09 16:51:10 CET 2024
-tx_timestamp=389
-modified=no
-version=2.7.2
+#HSQL Database Engine 2.7.3
+#Sat Jan 18 22:14:07 CET 2025
+tx_timestamp=415
+modified=yes
+version=2.7.3
